--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 layout: default
 home-title: wArrest's blog
 description: 什么都心不在焉
+header-img: assets/img/back.jpg
 ---
 
 {% include header.html %}
