--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-home-title: wArrest's blog
-description: 什么都心不在焉
+home-title: 王二狗的博客
+description: 他什么都心不在焉
 ---
 
 {% include header.html %}
