--- a/archives.html
+++ b/archives.html
@@ -6,7 +6,7 @@ layout: default
 {% include header.html %}
 
 <div class="g-banner tags-banner {{ site.postPatterns | prepend: 'post-pattern-' }} {{ site.theme-color | prepend: 'bgcolor-' }}" data-theme="{{ site.theme-color }}">
-    <h2>archives</h2>
+    <h2>TAGS</h2>
 </div>
 
 <main class="tags-content">
@@ -27,7 +27,6 @@ layout: default
             {% endfor %}
         </li>
         
-        </div>
         {% endfor%}
     </ul>
 </main>
