--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 home-title: 王二狗的博客
 description: 他什么都心不在焉
-header-img: /assets/img/banner.jpg
+header-img: /assets/img/back.jpg
 ---
 
 {% include header.html %}
