--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@ header-img: /assets/img/back.jpg
                         {% if forloop.index > site.recommend-condition-size %}
                             {% break %}
                         {% endif %}
-                        <a href="{{ "tags.html#" | append: tag[0] | prepend: site.baseurl }}" class="tag">{{ tag[0]}}</a>
+                        <a href="#" class="tag">{{ tag[0]}}</a>
                     {% endfor %}
                 </section>
                 {% endif %}
