--- a/logs.html
+++ b/logs.html
@@ -6,19 +6,13 @@ layout: default
 {% include header.html %}
 
 <div class="g-banner tags-banner {{ site.postPatterns | prepend: 'post-pattern-' }} {{ site.theme-color | prepend: 'bgcolor-' }}" data-theme="{{ site.theme-color }}">
-    <h2>CATEGORIES</h2>
+    <h2>LOGS</h2>
 </div>
 
 <main class="tags-content">
 
     <ul class="tags-list">
-        <li>
-        {% if site.recommend-tags and site.logs.size>0 %}
-            {% for tag in site.logs %}
-            <a href="#{{ tag[0] }}" class="tag">{{ tag[0]}}</a>
-            {% endfor %}
-        {% endif %}
-        </li>
+       
         {% for tag in logs %}
         <li>
             <span class="tag-name" id="{{ tag[0] }}">「{{ tag[0] }}」</span>
