--- a/friendLink.html
+++ b/friendLink.html
@@ -1,12 +1,12 @@
 ---
-title: 友情链接
+title: friendLink
 layout: default
 ---
 
 {% include header.html %}
 
 <div class="g-banner tags-banner {{ site.postPatterns | prepend: 'post-pattern-' }} {{ site.theme-color | prepend: 'bgcolor-' }}" data-theme="{{ site.theme-color }}">
-    <h2>TAGS</h2>
+    <h2>友情链接</h2>
 </div>
 
 <main class="tags-content">
@@ -18,7 +18,6 @@ layout: default
             <a class="tag-post" href="https://xukimseven.github.io" title="鸡哥">「鸡哥的博客」</a>
         </li>
         
-        {% endfor%}
     </ul>
 </main>
     
