--- a/classify.html
+++ b/classify.html
@@ -1,12 +1,12 @@
 ---
-title: categories
+title: Series
 layout: default
 ---
 
 {% include header.html %}
 
 <div class="g-banner tags-banner {{ site.postPatterns | prepend: 'post-pattern-' }} {{ site.theme-color | prepend: 'bgcolor-' }}" data-theme="{{ site.theme-color }}">
-    <h2>CATEGORIES</h2>
+    <h2>SERIES</h2>
 </div>
 
 <main class="tags-content">
