--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: default
-home-title: 王二狗的博客
-description: 他什么都心不在焉
+home-title: 小笨笨的乐园
+description: 我会嘻哈会很酷吗
 header-img: /assets/img/back.jpg
 ---
 
