--- a/friendLink.html
+++ b/friendLink.html
@@ -15,7 +15,7 @@ layout: default
         
         <li>
             <span class="tag-name" >
-                <a href="https://xukimseven.github.io/">「鸡哥的博客」</a>
+                <a href="https://www.baidu.com/">「李彦宏我小弟」</a>
             </span>
                 </br>
             
